0612 活動預載卡片

--- a/src/components/RegisterPage/MemberRegisterPage/MemberRegister.scss
+++ b/src/components/RegisterPage/MemberRegisterPage/MemberRegister.scss
@@ -1,10 +1,6 @@
-body {
-    background: rgb(245, 245, 245) !important;
-    button:focus {
-        outline: none;
-    }
+:focus{
+    outline: none !important;
 }
-
 .CardContainer {
     padding: 20px;
     margin: 250px auto;
