--- a/src/components/RegisterPage/MemberRegisterPage/MemberRegister.css
+++ b/src/components/RegisterPage/MemberRegisterPage/MemberRegister.css
@@ -1,9 +1,5 @@
-body {
-  background: whitesmoke !important;
-}
-
-body button:focus {
-  outline: none;
+:focus {
+  outline: none !important;
 }
 
 .CardContainer {
@@ -23,4 +19,3 @@ body button:focus {
   margin-bottom: 10px;
   color: orange;
 }
-/*# sourceMappingURL=MemberRegister.css.map */
